--- a/README
+++ b/README
@@ -6,9 +6,6 @@ This library calls git commands and returns the output.
 Author : Scott Chacon
 Author : Davide Botti
 Author : Mario Rossi
-<<<<<<< HEAD
 Author : another author
-=======
 Author : John Doe
-Author :
->>>>>>> repo/master
+Author : Dade92
